# tqcli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  community_verify_0_7_0.yml  feature_request.md
.github/workflows/: ci.yml  community_verify_collect.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  WHY_PYTHON.md
docs/architecture/: README.md  agent_orchestrator.md  inference_engines.md  multi_process.md  overview.md  quantization_pipeline.md  security.md  skills_system.md  turboquant_kv.md
docs/coding_implementations/: plan_port_gemma4_model_to_fork.md  prd_port_gemma4_model_to_fork.md
docs/contributing/: BRANCH_PROTECTION_SETUP.md  RELEASING_WHEELS.md  SKILL_QUALITY_COMPENSATION_STRATEGY.md
docs/examples/: USAGE.md
docs/guides/: turboquant_kv_integration.md
docs/issues/: issues_log_2026-04-14.md
docs/prd/: PRD_AI_Skills_Builder.md  PRD_AI_Tinkering_and_Autonomous.md  PRD_turboquant_wheel_distribution.md
docs/prompts/: developer_reply_gemini_research_architecture_validation.md  developer_reply_skill_autonomy.md  developer_reply_skill_loader.md  gemini_research_kv_page_size_padding.md  gemini_research_padding_analysis_answers.md  gemini_research_turboquant_architecture_validation.md  implement_headless_chat_and_vllm_multimodal.md  resume_turboquant_kv_integration.md  resume_vllm_turboquant_e2e.md  ship_turboquant_wheels.md
docs/technical_plans/: TP_AI_Skills_Builder.md  TP_AI_Tinkering_and_Autonomous.md  TP_turboquant_wheel_distribution.md
patches/llama-cpp-turboquant/: README_banner.md  WORKSTREAM_A_BLOCKER.md  init_py_sentinel.py  pyproject_toml_overlay.md  tag_command.sh  wheels.yml
patches/vllm-turboquant/: issue_22_page_size_fix.md
patches/vllm-turboquant/wheel_distribution_v0.7.0-tq1/: README.md  fork_changes.md  release_body.md  verification_runpod.md
scripts/: community_verify.sh
tests/: integration_lifecycle.py  test_agent_orchestrator.py  test_basic.py  test_cli_calibrate_kv.py  test_engine_auditor.py  test_headless_chat.py  test_integration_agent_functional.py  test_integration_agent_modes.py  test_integration_gemma4_vllm_cpu_offload.py  test_integration_turboquant_kv.py  test_integration_vllm.py  test_json_stdout_clean.py  test_kv_metadata_corpus.py  test_multiprocess.py  test_skill_generator.py
tests/integration_reports/: agent_modes_functional_report.json  agent_modes_functional_report.md  agent_modes_report.json  agent_modes_report.md  gemma4_vllm_cpu_offload_report.json  gemma4_vllm_cpu_offload_report.md  llama_cpp_test_cases.md  llama_cpp_test_report.json  llama_cpp_test_report.md  turboquant_kv_comparison_report.json  turboquant_kv_comparison_report.md  turboquant_kv_comparison_test_cases.md  turboquant_kv_integration_update_summary.md  turboquant_kv_test_cases.md  turboquant_kv_unified_report.json  turboquant_kv_unified_report.md  vllm_test_cases.md  vllm_test_report.json  vllm_test_report.md
tests/release_drafts/: linkedin_0.7.0.md  v0.7.0.md
tqcli/: __init__.py  __main__.py  cli.py  config.py
tqcli/core/: agent_orchestrator.py  agent_tools.py  engine.py  engine_auditor.py  handoff.py  kv_metadata_generator.py  kv_quantizer.py  llama_backend.py  model_registry.py  multiprocess.py  performance.py  router.py  security.py  server.py  server_client.py  skill_generator.py  system_info.py  thinking.py  unrestricted.py  vllm_backend.py  vllm_config.py
tqcli/prompts/: __init__.py  skill_generation_prompt.md
tqcli/skills/: base.py  loader.py
tqcli/skills/builtin/: benchmark.py  model_manager.py  (+2 more)
tqcli/ui/: console.py  interactive.py
(+5 files in other folders)
