[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-cli"
version = "0.7.0"
description = "TurboQuant CLI — local LLM inference with smart model routing, performance monitoring, and TurboQuant methodologies"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ithllc"},
]
keywords = ["llm", "quantization", "inference", "cli", "turboquant", "llama-cpp", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "huggingface-hub>=0.20",
    "jinja2>=3.1",
]

# Distribution name on PyPI is `turboquant-cli`; the import name remains `tqcli`
# (dateutil pattern). Optional extras pull TurboQuant fork wheels — never the
# upstream `llama-cpp-python` / `vllm` packages, which lack the TurboQuant KV
# kernels.
[project.optional-dependencies]
llama-tq = [
    "llama-cpp-python-turboquant>=0.3.0",
]
vllm-tq = [
    "vllm-turboquant==0.7.0.postYYYYMMDD",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
]
vllm-tq-blackwell = [
    "vllm-turboquant-blackwell==0.7.0.postYYYYMMDD",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
]
all = ["turboquant-cli[llama-tq,vllm-tq]"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
tqcli = "tqcli.cli:main"
tq = "tqcli.cli:main"

[project.urls]
Homepage = "https://github.com/tqcli/tqcli"
Repository = "https://github.com/tqcli/tqcli"

[tool.setuptools.packages.find]
include = ["tqcli*"]

[tool.ruff]
target-version = "py310"
line-length = 100
